--- a/admin/public/css/radiator.css
+++ b/admin/public/css/radiator.css
@@ -4,7 +4,9 @@ body { background-color: #fff; margin: 0 auto; max-width: 90%; padding-top: 30px
 .charts {
     max-width: 100%;
     margin-left: -40px;
+    margin-bottom: 50px;
 }
+
 header {
     color: #95B1CA;
     font-size: 18px;
