--- a/common/app/views/fragments/commonCssSetup.scala.html
+++ b/common/app/views/fragments/commonCssSetup.scala.html
@@ -2,7 +2,10 @@
 <!--[if (gt IE 8) | (IEMobile)]><!-->
 <style type="text/css">
     @Html(Head.css)
-    /* any images in  head need to go here (or they'll be relative to the page) */
+</style>
+<!--<![endif]-->
+<style type="text/css">
+    /* any images in head need to go here (or they'll be relative to the page) */
     .i,.caption:before,figcaption:before { background-image: url(@Static("images/global/sprite.png")); }
     .is-updating { background-image: url(@Static("images/auto-update-activity.gif")); }
 </style>
