Browser support tables
First cut at a basic browser support table.

Waiting for https://github.com/guardian/frontend/pull/1269 before I can make this more useful.

--- a/admin/app/views/admin.scala.html
+++ b/admin/app/views/admin.scala.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="@routes.AnalyticsController.kpis()">KPIs</a></li>
             <li><a href="@routes.AnalyticsController.pageviews()">Pageviews</a></li>
+            <li><a href="@routes.AnalyticsController.browsers()">Browser support tables</a></li>
         </ul>
     </div>
     <div class="row">
@@ -35,7 +36,7 @@
     </div>
     <div class="row">
         <h3>Radiator</h3>
-        <p class="muted">Big screen display. Navigation is for display purposes only.</p>
+        <p class="muted">Big screen display.</p>
         <ul>
             <li><a href="@controllers.routes.RadiatorController.render()">Radiator</a></li>
         </ul>
