Fixed styling issue with blocks on Network Fronts.
The page now understands whether it is a network front or not.

--- a/front/app/views/fragments/frontBlock.scala.html
+++ b/front/app/views/fragments/frontBlock.scala.html
@@ -1,4 +1,4 @@
-@(block: Trailblock)(implicit request: RequestHeader)
+@(block: Trailblock, page: FrontPage)(implicit request: RequestHeader)
 
 <section 
     class="front-section zone-@block.description.section" 
@@ -9,7 +9,7 @@
 	    @if("/" + block.description.id == request.path) {
             @fragments.headers.sectionHead(block.description.name)
 	    } else {
-	       @fragments.headers.frontSectionHead(block.description, Some(Edition(request)))
+	       @fragments.headers.frontSectionHead(block.description, page.isNetworkFront, Some(Edition(request)))
         } 
 	}
 
