--- a/front/app/views/front.scala.html
+++ b/front/app/views/front.scala.html
@@ -1,7 +1,6 @@
-@(front: MetaData, trailblocks: Seq[Trailblock])(implicit request: RequestHeader)
+@(front: FrontPage, trailblocks: Seq[Trailblock])(implicit request: RequestHeader)
 
 @main(front, Switches.all){
 }{
     @fragments.frontBody(front, trailblocks)
-    
 }
