--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -37,6 +37,13 @@
             <i class="i i-top-stories"></i>
         </a>
 
+        <a href="/identity/account" data-link-name="User account"
+            class="control control--account">
+            <i class="i i-nav-divider"></i>
+            <span class="js-account-info">Your account</span>
+            <i class="i i-account"></i>
+        </a>
+
         <div class="nav-popup-topstories nav-popup nav-popup--box is-off" data-link-context="front-trails/news"></div>
 
         <div class="nav-popup-search nav-popup nav-popup--box is-off"></div>
