--- a/common/app/assets/stylesheets/module/_live-blog.scss
+++ b/common/app/assets/stylesheets/module/_live-blog.scss
@@ -96,8 +96,10 @@
     background-repeat: no-repeat;
     border-top: 4px solid #3299d0;
 
-    @include svg {
-        background-image: url(../images/twitter/bird.d1a2ed26432057c3d224a813c7e1221c.svg) !important;
+    @if ($svg-support) {
+        .svg & {
+            background-image: url(../images/twitter/bird.d1a2ed26432057c3d224a813c7e1221c.svg) !important;
+        }
     }
 }
     .tweet,
