--- a/common/app/assets/stylesheets/theme/_global-icons-svg.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-svg.scss
@@ -1,4 +1,4 @@
-@include svg {
+@if $svg-support {
     .svg-i-arrow-blue-down { background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGhlaWdodD0iNy4zMTkiIHdpZHRoPSIxNSI+PHBhdGggZmlsbD0iIzAwNjk5OCIgZD0iTTcuNTg3IDUuMDI5bC03LjU4Ny01LjAyOXYxLjE1OWw3LjU4NyA2LjE2IDcuNDEzLTYuMTZ2LTEuMTU5bC03LjQxMyA1LjAyOXoiLz48L3N2Zz4=); background-position: 0 0; background-repeat: no-repeat; }
     .svg .i-arrow-blue-down { @extend .svg-i-arrow-blue-down; }
 
