--- a/common/app/views/fragments/commonCssSetup.scala.html
+++ b/common/app/views/fragments/commonCssSetup.scala.html
@@ -4,6 +4,9 @@
     @Html(Head.css)
 </style>
 <!--<![endif]-->
+<!--[if (lt IE 9) & (!IEMobile)]>
+    <link rel="stylesheet" type="text/css" href="@Static("stylesheets/old-ie.head.min.css")" />
+<![endif]-->
 
 @* any images in head need to go here (or they'll be relative to the page)} *@
 <style type="text/css">
@@ -12,7 +15,7 @@
 </style>
 
 <!--[if (lt IE 9) & (!IEMobile)]>
-    <link rel="stylesheet" type="text/css" href="@Static("stylesheets/old-ie.min.css")" />
+    <link rel="stylesheet" type="text/css" href="@Static("stylesheets/old-ie.global.min.css")" />
 <![endif]-->
 
 <style class="initial" data-cache-name="WebEgyptian" data-cache-file-woff="@Static("fonts/WebEgyptian.woff.js")" data-cache-file-ttf="@Static("fonts/WebEgyptian.ttf.js")"></style>
