--- a/admin/app/views/browsers.scala.html
+++ b/admin/app/views/browsers.scala.html
@@ -2,13 +2,34 @@
 
 @admin_main("Browsers", env, isAuthed = true) {
 
-    <h1>Browser usage on theguardian.com</h1>
+  <section id="usage">
+
+    <h1>Browser usage</h1>
     
     <p>
         Collected from Ophan data covering March 1, 2013 to present.
     </p>
+
+    <p>
+        Data is available by <a href="#combined">operating system and browser combined</a>, or individually by <a href="#browser">browser vendor</a>
+        or by <a href="#os">operating system</a>.
+    </p>
+
+    <p>
+        Confusingly, the Windows family versions are grouped together under their largely unknown major version numbers. Here is the key to that
+        data.
+    </p>
+    <ul>
+        <li>Windows 5.0 - 2000
+        <li>Windows 5.1 - XP
+        <li>Windows 5.2 - Server 2003
+        <li>Windows 6.0 - Server 2008 &amp; Vista
+        <li>Windows 6.1 - Win 7
+        <li>Windows 6.2 - Win 8
+        <li>Windows 6.3 - RT
+    </ul>
     
-    <h3>By operating system and browser</h3>
+    <h3 id="combined">By operating system and browser</h3>
 
     <p>
         Page views over 10k broken down by combined operating system and browser version across mobile and desktop.
@@ -20,23 +41,10 @@
         </caption>
         <thead>
             <tr>
-                <td>Total</td>
-                <td></td>
+                <td colspan="2">Total</td>
                 <td class="total"></td>
             </tr>
-            <tr class="legend">
-                <td></td>
-                <td>
-                    5.0 2000<br>
-                    5.1 XP<br>
-                    5.2 Server 2003<br>
-                    6.0 Server 2008 & Vista<br>
-                    6.1 Win 7<br>
-                    6.2 Win 8<br>
-                    6.3 RT<br>
-                </td>
-                <td></td>
-            </tr>
+
         </thead>
         <tbody>
         @combined.toList.sortBy{_._2}.reverse.take(300).zipWithIndex.map { case (row, index) =>
@@ -49,17 +57,13 @@
         </tbody>
         <tfoot>
             <tr>
-                <td>Total</td>
-                <td></td>
+                <td colspan="2">Total</td>
                 <td class="total"></td>
             </tr>
         </tfoot>
     </table>
-
-
-
     
-    <h3>By operating system</h3>
+    <h3 id="os">By operating system</h3>
 
     <p>
         Page views over 10k broken down by operating system version
@@ -71,8 +75,7 @@
         </caption>
         <thead>
             <tr>
-                <td>Total</td>
-                <td></td>
+                <td colspan="2">Total</td>
                 <td class="total"></td>
             </tr>
         </thead>
@@ -87,16 +90,13 @@
         </tbody>
         <tfoot>
             <tr>
-                <td>Total</td>
-                <td></td>
+                <td colspan="2">Total</td>
                 <td class="total"></td>
             </tr>
         </tfoot>
     </table>
 
-
-
-    <h2>Browser vendor</h2>
+    <h3 id="browser">Browser vendor</h3>
     
     <p>
         Page views over 10k broken down by browser family and version.
@@ -108,8 +108,7 @@
         </caption>
         <thead>
             <tr>
-                <td>Total</td>
-                <td></td>
+                <td colspan="2">Total</td>
                 <td class="total"></td>
             </tr>
         </thead>
@@ -124,8 +123,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td>Total</td>
-                <td></td>
+                <td colspan="2">Total</td>
                 <td class="total"></td>
             </tr>
         </tfoot>
@@ -135,4 +133,6 @@
     <script>
         curl(['modules/BrowserStats']);
     </script>
+    
+  </section>    
 }
