--- a/style-guide/app/views/styleGuide/fragments/sprites.scala.html
+++ b/style-guide/app/views/styleGuide/fragments/sprites.scala.html
@@ -1,5 +1,4 @@
-<table class="styleguide-table styleguide-table-two-col sprite-table"><thead><tr><th class="type-11">CSS selector</th><th class="type-11">Output</th></tr></thead><tbody><tr><td class="type-9">.i-account</td><td class="sprite-cell"><i class="i i-account"></i></td></tr>
-<tr><td class="type-9">.i-arrow-blue-down</td><td class="sprite-cell"><i class="i i-arrow-blue-down"></i></td></tr>
+<table class="styleguide-table styleguide-table-two-col sprite-table"><thead><tr><th class="type-11">CSS selector</th><th class="type-11">Output</th></tr></thead><tbody><tr><td class="type-9">.i-arrow-blue-down</td><td class="sprite-cell"><i class="i i-arrow-blue-down"></i></td></tr>
 <tr><td class="type-9">.i-arrow-small-up</td><td class="sprite-cell"><i class="i i-arrow-small-up"></i></td></tr>
 <tr><td class="type-9">.i-arrow-white-down</td><td class="sprite-cell"><i class="i i-arrow-white-down"></i></td></tr>
 <tr><td class="type-9">.i-close-icon</td><td class="sprite-cell"><i class="i i-close-icon"></i></td></tr>
@@ -28,6 +27,7 @@
 <tr><td class="type-9">.i-menu-active</td><td class="sprite-cell"><i class="i i-menu-active"></i></td></tr>
 <tr><td class="type-9">.i-menu</td><td class="sprite-cell"><i class="i i-menu"></i></td></tr>
 <tr><td class="type-9">.i-powered-by-ee</td><td class="sprite-cell"><i class="i i-powered-by-ee"></i></td></tr>
+<tr><td class="type-9">.i-profile</td><td class="sprite-cell"><i class="i i-profile"></i></td></tr>
 <tr><td class="type-9">.i-quote-marks</td><td class="sprite-cell"><i class="i i-quote-marks"></i></td></tr>
 <tr><td class="type-9">.i-red-card</td><td class="sprite-cell"><i class="i i-red-card"></i></td></tr>
 <tr><td class="type-9">.i-search-blue</td><td class="sprite-cell"><i class="i i-search-blue"></i></td></tr>
