--- a/common/app/views/fragments/javaScriptConfig.scala.html
+++ b/common/app/views/fragments/javaScriptConfig.scala.html
@@ -18,7 +18,8 @@
         "isDotcom": @{!Site(request).isDefined}, @* TODO temporary till after dotcom switch *@
         "oasHost": @SiteOr{site=>"oas.guardian.co.uk"}{"oas.theguardian.com"},
         "oasUrl": @SiteOr{site=>"http://oas.guardian.co.uk/RealMedia/ads/"}{"http://oas.theguardian.com/RealMedia/ads/"},
-        "oasSiteIdHost": @SiteOr{site=>"@Configuration.oas.siteIdHost"}{"www.theguardian.com"}
+        "oasSiteIdHost": @SiteOr{site=>"@Configuration.oas.siteIdHost"}{"www.theguardian.com"},
+        "idUrl": "@Configuration.id.url",
     },
     "switches" : { @{Html(switches.map{ switch =>
             s""""${JavaScriptVariableName(switch.name)}":${switch.isSwitchedOn}"""
