Fix failed merge

--- a/interactive/app/views/fragments/interactiveBody.scala.html
+++ b/interactive/app/views/fragments/interactiveBody.scala.html
@@ -9,6 +9,8 @@
 
     <article id="article" class="article"
         itemprop="mainContentOfPage" itemscope itemtype="@interactive.schemaType" role="main">
+       
+        <header class="article-head">
             @fragments.dateline(interactive.webPublicationDate, interactive.isLive)
         </header>
 
