--- a/common/app/assets/stylesheets/_vars.scss
+++ b/common/app/assets/stylesheets/_vars.scss
@@ -65,7 +65,7 @@ $linkBlue: #005689;
 $mushroom: #F4F4EE;
 $medianMushroom: #EDEDE7;
 $darkMushroom: #E3E3DB;
-$ctaBlue: #009BCf;
+$ctaBlue: $linkBlue;
 
 
 
